LinKreta_POC_Repository/force-app/main/default/objects/EAPartnerLogin_Mapper__c/EAPartnerLogin_Mapper__c.object-meta.xml
<CustomObject>
    <description>This object has been created as part of the LinKreta initiative and is a part of the function to support an EA to login as a Partner. The purpose of this object is to capture the Partners that a specific EA can login as.</description>
    <label>EA Partner Login Mapper</label>
    <nameField>
        <displayFormat>EA PL MID - {000000000}</displayFormat>
        <label>EA Partner Login Mapper ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EA Partner Login Mapper</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>