LinKreta_POC_Repository/force-app/main/default/objects/EAPartnerLogin_Mapper__c/fields/EA_Emp_Id__c.field-meta.xml
<CustomField>
    <fullName>EA_Emp_Id__c</fullName>
    <formula>EAUser__r.EMP_ID__c</formula>
    <label>EA Emp Id</label>
    <type>Text</type>
</CustomField>