LinKreta_POC_Repository/force-app/main/default/objects/EAPartnerLogin_Mapper__c/fields/EAUser__c.field-meta.xml
<CustomField>
    <fullName>EAUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EA User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select an Active Standard User that must have Employee Id</errorMessage>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.EMP_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>EA_Login_Mapper</relationshipName>
    <type>Lookup</type>
</CustomField>