LinKreta_POC_Repository/force-app/main/default/objects/EAPartnerLogin_Mapper__c/fields/Mapping_Id__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Id__c</fullName>
    <externalId>true</externalId>
    <label>Mapping Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>