LinKreta_POC_Repository/force-app/main/default/objects/EAPartnerLogin_Mapper__c/fields/Partner_Emp_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Emp_Id__c</fullName>
    <formula>PartnerUser__r.EMP_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Emp Id</label>
    <type>Text</type>
</CustomField>