LinKreta_POC_Repository/force-app/main/default/objects/EAPartnerLogin_Mapper__c/fields/PartnerUserEmail__c.field-meta.xml
<CustomField>
    <fullName>PartnerUserEmail__c</fullName>
    <formula>PartnerUser__r.Email</formula>
    <label>Partner User Email</label>
    <type>Text</type>
</CustomField>