LinKreta_POC_Repository/force-app/main/default/objects/EAPartnerLogin_Mapper__c/fields/PartnerUserName__c.field-meta.xml
<CustomField>
    <fullName>PartnerUserName__c</fullName>
    <formula>PartnerUser__r.Username</formula>
    <label>Partner User Name</label>
    <type>Text</type>
</CustomField>