LinKreta_POC_Repository/force-app/main/default/objects/EAPartnerLogin_Mapper__c/fields/PartnerUserStatus__c.field-meta.xml
<CustomField>
    <fullName>PartnerUserStatus__c</fullName>
    <formula>PartnerUser__r.IsActive</formula>
    <label>Partner User Status</label>
    <type>Checkbox</type>
</CustomField>