LinKreta_POC_Repository/force-app/main/default/objects/EAPartnerLogin_Mapper__c/listViews/Active_Mappings.listView-meta.xml
<ListView>
    <fullName>Active_Mappings</fullName>
    <columns>NAME</columns>
    <columns>Mapping_Id__c</columns>
    <columns>EAUser__c</columns>
    <columns>PartnerUser__c</columns>
    <columns>Is_Deleted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Deleted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Active Mappings</label>
</ListView>