LinKreta_POC_Repository/force-app/main/default/objects/EAPartnerLogin_Mapper__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PartnerUser__c</columns>
    <columns>EAUser__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>